# cppknowledge

./: .gitignore  README.md
basics/Pilzschaf/02_hello_world/: main.cpp
basics/Pilzschaf/14_tictactoe/: main.cpp
basics/Pilzschaf/18_structs/: main.cpp
basics/Pilzschaf/41_vector/: main.cpp
basics/thecherno/: 36_initi_list.cpp  43_lifetime.cpp  44_smartpointers.cpp  45_copying.cpp  46_arrow_operator.cpp  47_dynamic_arrays.cpp  48_optimize_vector.cpp  52_multiple_returns.cpp  53_templates.cpp  54_stack_heap.cpp  58_function_pointer.cpp  59_lambdas.cpp  60_namespace_usage.cpp  61_namespaces.cpp  62_threads.cpp  63_timing.cpp  64_multidim_arrays.cpp  65_sorting.cpp  66_type_punning.cpp  67_unions.cpp  68_virtual_destructors.cpp  69_casting.cpp  72_pch.h  72_precompiled_headers.cpp  73_dynanmic_cast.cpp  CMakeLists.txt  README.md  enum_test.cpp
basics/thecherno/src/: log.cpp  main.cpp
designpatterns/01_Strategy/: 01_ StrategyPattern.cpp
opengl/Pilzschaf/: README.md  ToDo.todo  camera.h  defines.h  floating_camera.h  fps_camera.h  index_buffer.h  main.cpp  mesh.h  shader.cpp  shader.h  vertex_buffer.h
opengl/Pilzschaf/models/: Tree01.bmf  cube.bmf  fern.bmf  monkey.bmf
opengl/Pilzschaf/shaders/: basic.fs  basic.vs
opengl/Pilzschaf/tools/: modelexporter.cpp
opengl/learnopengl/: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  main.cpp  shader.h
opengl/learnopengl/shaders/: basic.vs
qt/ProgrammingKnowledge/: 01_intro.cpp  01_intro.pro  README.md
